--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,4 +9,6 @@ jobs:
       - uses: actions/checkout@master
         with:
           fetch-depth: 1
-      - run: mkdir -p /home/runner/.android && touch /home/runner/.android/repositories.cfg && ./gradlew testDebugUnitTest
+      - run: mkdir -p /home/runner/.android && touch /home/runner/.android/repositories.cfg
+      - run: chmod 755 /usr/local/lib/android/sdk
+      - run: ./gradlew testDebugUnitTest
