--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,5 +15,5 @@ jobs:
     needs: checkout
     runs-on: ubuntu-latest
       - name: Run unit test
-        run: mkdir -p /home/runner/.android && touch /home/runner/.android/repositories.cfg
-        run: ./gradlew testDebugUnitTest
+      - run: mkdir -p /home/runner/.android && touch /home/runner/.android/repositories.cfg
+      - run: ./gradlew testDebugUnitTest
