--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -16,5 +16,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run unit test
-        run: mkdir -p /home/runner/.android && touch /home/runner/.android/repositories.cfg
-        run: ./gradlew testDebugUnitTest
+      - run: mkdir -p /home/runner/.android && touch /home/runner/.android/repositories.cfg
+      - run: ./gradlew testDebugUnitTest
