--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -6,7 +6,7 @@ jobs:
     name: Checkout project
     runs-on: ubuntu-latest
     steps:
-        uses: actions/checkout@master
+      - uses: actions/checkout@master
         with:
           fetch-depth: 1
   build:
