--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -10,4 +10,5 @@ jobs:
           fetch-depth: 1
       - run: mkdir -p /home/runner/.android && touch /home/runner/.android/repositories.cfg
       - run: ./gradlew testDebugUnitTest
-      - run: avdmanager create avd -n test -k "system-images;android-28;google_apis;x86"
+      - run: /usr/local/lib/android/sdk/tools/bin/avdmanager create avd -n test -k "system-images;android-28;google_apis;x86"
+      - run: /usr/local/lib/android/sdk/tools/emulator -avd test
