--- a/.github/workflows/manual_trigger.yml
+++ b/.github/workflows/manual_trigger.yml
@@ -26,5 +26,6 @@ jobs:
       - name: Extract branch name
         shell: bash
         run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extract_branch
       - name: echo branch2
-        run: echo "branch name ${branch}"
+        run: echo "branch name ${{ steps.extract_branch.outputs.branch }}"
