--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,14 +1,29 @@
 name: Run Test
-on: push
+on:
+  push:
+  workflow_dispatch:
+    inputs:
+      qa_env:
+        description: '接続するAPIのqa環境を指定する'
+        required: true
+        type: choice
+        options:
+          - qa1
+          - qa2
+          - qa3
+          - qa4
+          - qa5
+          - qa6
+          - qa7
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-        with:
-          fetch-depth: 1
-      - run: mkdir -p /home/runner/.android && touch /home/runner/.android/repositories.cfg
-      - run: ./gradlew testDebugUnitTest
-      - run: /usr/local/lib/android/sdk/tools/bin/avdmanager create avd -n test -k "system-images;android-28;google_apis;x86"
-      - run: /usr/local/lib/android/sdk/tools/emulator -avd test
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Hoge
+        run: |
+          sed -i 's/\(.*app_version \)"\(.*\)"/\1"9.0.0"/' ios/fastlane/Deliverfile
+          cat ios/fastlane/Deliverfile
+          
