--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -24,6 +24,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Hoge
         run: |
-          sed -i 's/\(.*app_version \)"\(.*\)"/\1"9.0.0"/' ios/fastlane/Deliverfile
+          sed -i -e 's/\(.*app_version \)"\(.*\)"/\1"9.0.0"/' ios/fastlane/Deliverfile
           cat ios/fastlane/Deliverfile
           
