--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           ANDROID_APP_VERSION=$(sed -n 's/.*versionName "\(.*\)".*/\1/p' app/build.gradle)
           IOS_APP_VERSION=$(sed -n 's/.*app_version "\(.*\)".*/\1/p' ios/fastlane/Deliverfile)
-          APP_VERSION = ruby -e "v1 = Gem::Version.new('$ANDROID_APP_VERSION'); v2 = Gem::Version.new('$IOS_APP_VERSION'); puts v1 > v2 ? v1 : v2"
+          APP_VERSION=$(ruby -e "v1 = Gem::Version.new('$ANDROID_APP_VERSION'); v2 = Gem::Version.new('$IOS_APP_VERSION'); puts v1 > v2 ? v1 : v2")
           echo "APP_VERSION=$APP_VERSION"
       - name: Hoge
         run: |
