--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -1,11 +1,14 @@
 name: Labeler
 on:
-  pull_request:
+  pull_request_target:
 
 jobs:
-  test:
+  labeler:
+    permissions:
+      contents: read
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/labeler@v2
+      - uses: actions/labeler@v5
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
