--- a/.github/workflows/upload-apk.yml
+++ b/.github/workflows/upload-apk.yml
@@ -76,6 +76,10 @@ jobs:
           unzip apk.zip
           mv *.apk kanna.apk
 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+
       - name: Upload to App Distribution
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
