--- a/.github/workflows/upload-apk.yml
+++ b/.github/workflows/upload-apk.yml
@@ -79,12 +79,15 @@ jobs:
         with:
           node-version: 20.x
 
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
       - name: Upload to App Distribution
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
           FIREBASE_PROJECT_ID: hellogithubactions-b0f74
         run: |
-          npx firebase appdistribution:distribute app-debug.apk --app 1:930094710384:android:009c054bfb510e226b3eb5
+          firebase appdistribution:distribute app-debug.apk --app 1:930094710384:android:009c054bfb510e226b3eb5
 
       - uses: actions/upload-artifact@v4
         if: ${{ failure() }}
