--- a/.github/workflows/upload-apk.yml
+++ b/.github/workflows/upload-apk.yml
@@ -17,11 +17,13 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            // ワークフローの一覧を取得.
             const workflows = await github.rest.actions.listRepoWorkflows({
                owner: context.repo.owner,
                repo: context.repo.repo,
             });
             
+            // APK をアップロードしたワークフローを取得.
             const workflowFileName = 'build.yml';
             let workflowId = null;
             for (const workflow of workflows.data.workflows) {
@@ -36,6 +38,7 @@ jobs:
             }
             console.log(`Workflow ID: ${workflowId}`);
             
+            // APK をアップロードしたワークフローの実行結果を取得.
             const workflowRuns = await github.rest.actions.listWorkflowRuns({
                owner: context.repo.owner,
                repo: context.repo.repo,
@@ -51,29 +54,33 @@ jobs:
             const runId = workflowRuns.data.workflow_runs[0].id;
             console.log(`Run ID: ${runId}`);
             
+            // ワークフローの実行時に保存された成果物を取得.
             const allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
                owner: context.repo.owner,
                repo: context.repo.repo,
                run_id: runId
             });
             
+            // 対象の APK ファイルを取得.
             const matchArtifact = allArtifacts.data.artifacts.filter((artifact) => {
               return artifact.name === "${{ inputs.app-version }}.apk"
             })[0];
-            console.log(`matchArtifact = JSON.stringify(matchArtifact)`);
-            let download = await github.rest.actions.downloadArtifact({
+            
+            // APK をダウンロードする.
+            const download = await github.rest.actions.downloadArtifact({
                owner: context.repo.owner,
                repo: context.repo.repo,
                artifact_id: matchArtifact.id,
                archive_format: 'zip',
             });
-            console.log(`success download`);
-            let fs = require('fs');
+            
+            const fs = require('fs');
             fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/apk.zip`, Buffer.from(download.data));
 
       - name: Unzip artifact
         run: |
           unzip apk.zip
+          mv *.apk kanna.apk
 
       - uses: actions/setup-node@v4
         with:
@@ -87,7 +94,8 @@ jobs:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
           FIREBASE_PROJECT_ID: hellogithubactions-b0f74
         run: |
-          firebase appdistribution:distribute app-debug.apk --app 1:930094710384:android:009c054bfb510e226b3eb5
+          firebase appdistribution:distribute kanna.apk \ 
+            --app 1:930094710384:android:009c054bfb510e226b3eb5
 
       - uses: actions/upload-artifact@v4
         if: ${{ failure() }}
