--- a/.github/workflows/upload-apk.yml
+++ b/.github/workflows/upload-apk.yml
@@ -82,6 +82,9 @@ jobs:
           unzip apk.zip
           mv *.apk kanna.apk
 
+      - name: List files
+        run: ls -l
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
