--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -19,6 +19,7 @@ jobs:
         uses: peter-evans/create-pull-request@v7
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           commit-message: Update hogehoge.txt
           branch: ci/update_text
           branch-suffix: timestamp
